# neurobase

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  index.js  package.json  pyproject.toml
.claude/skills/code-review-relay/: SKILL.md
.claude/skills/codexprompt/: SKILL.md
.claude/skills/xcode-review/: SKILL.md
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  adapter-guide.md  architecture.md  code-review-relay.md  how-it-works.md  known-gaps.md  neurobase-architecture-options.md  neurobase-build-plan.md  neurobase-spec-appendix.md  neurobase-vscode-extension-execution-plan.md
docs/adr/: 0000-template.md  0001-codex-capture-wiring.md  0002-claude-cli-json-reliability.md  0003-hook-latency-budget.md  0004-codex-injection-fallback.md  0005-codex-injection-confirmed.md  0006-codex-hook-command-tokenization-and-trust.md  0007-recommender-contract.md  0007-recommender-proposal-activation-model.md  0008-phase-7-mcp-server.md  0009-vscode-extension-thin-client.md  0010-proposal-draft-boundary.md  0011-survival-installed-hash.md  0012-curator-plan-payload-batching.md  0013-capture-fidelity-event-shapes.md  0014-transcript-distill-curation.md  0015-store-chokepoint-handle.md  0015-webui-surface.md  0016-store-schema-2-project-records-profiles.md  0017-egress-policy-gate.md  0018-hook-receipts-degraded-state.md  0019-folder-scoped-auto-enable.md  0019-webui-surface.md  README.md
docs/notes/: 2026-07-08-phase-7-mcp-plan.md  2026-07-08-phase-8-recommender-scope.md  2026-07-09-ci-guardrails-and-phase-7-rebase.md  2026-07-09-phase-8-recommender-plan.md  2026-07-15-webui-phase1-plan.md  2026-07-16-claude-user-hook-smoke.md  2026-07-16-phase-c-tier2-distill-live-eval.md  2026-07-16-provenance-plan.md  2026-07-16-webui-app-shell-plan.md  2026-07-17-claude-usage-runaway-incident.md  2026-07-18-coverage-report.md  2026-07-21-hardening-decisions.md  2026-07-21-hardening-plan-draft.md  README.md
docs/notes/spikes/: 2026-07-08-s3-install-smoke.md  README.md  S-cf4-argv-ceiling.md  S-cf5-distill-quality.md
docs/reviews/: 2026-07-07-phase-0-bootstrap.md  2026-07-07-phase-0-spikes.md  2026-07-07-phase-1-core-store.md  2026-07-07-phase-2-brain.md  2026-07-07-phase-3-curator.md  2026-07-07-phase-4-claude-adapter.md  2026-07-08-holistic-audit.md  2026-07-08-phase-4-init.md  2026-07-08-phase-5-codex-adapter.md  2026-07-08-phase-5-init.md  2026-07-08-phase-7-mcp-impl.md  2026-07-08-phase-7-mcp-plan.md  2026-07-08-phase-7-mcp-registration.md  2026-07-09-ci-local-gate-guardrails.md  2026-07-09-phase-8-recommender-plan.md  2026-07-09-phase-8-workstream-a-contract.md  2026-07-09-phase-8-workstream-b-seed-importer.md  2026-07-10-fix-seed-windows-crlf-paths.md  2026-07-10-phase-8-workstream-c-corpus-loader.md  2026-07-10-phase-8-workstream-d-miner.md  2026-07-10-phase-8-workstream-efg-recommender.md  2026-07-10-phase-8-workstream-h-metrics.md  2026-07-12-how-it-works-doc.md  2026-07-13-known-gaps-doc.md  2026-07-13-phase-9-release-prep.md  2026-07-14-capture-fidelity-foundation.md  2026-07-14-release-v0.1.0.md  2026-07-15-phase-c-tier2-distill-spikes-adr.md  2026-07-16-harden-ci-pytest-timeout.md  2026-07-16-phase-c-tier2-distill-impl.md  2026-07-16-test-distill-coverage-gaps.md  2026-07-16-webui-phase1-suggestions.md  2026-07-18-coverage-gate.md  2026-07-18-coverage-report.md  2026-07-18-dotted-key-parser.md  2026-07-19-gap3-coverage.md  2026-07-20-curate-pass-budget.md  2026-07-20-runaway-containment.md  2026-07-21-codex-hook-reentrancy-fix.md  2026-07-21-curator-handle.md  (+18 more)
scripts/: audit_command_redaction.py  check_store_chokepoint.py  ci.py
src/neurobase/: __init__.py  __main__.py
src/neurobase/adapters/: __init__.py  recall_common.py  scribe_common.py
src/neurobase/adapters/claude/: __init__.py  install.py  recall.py  scribe.py
src/neurobase/adapters/codex/: __init__.py  install.py  recall.py  scribe.py
src/neurobase/brain/: __init__.py  anthropic_api.py  base.py  claude_cli.py  codex_cli.py  select.py
src/neurobase/cli/: __init__.py  diagnostics.py
src/neurobase/core/: __init__.py  backups.py  config.py  enable.py  linkify.py  locks.py  process_guard.py  projects.py  redact.py  search.py  store.py  store_handle.py
src/neurobase/curator/: __init__.py  budget.py  distill.py  engine.py
src/neurobase/mcp/: __init__.py  server.py
src/neurobase/recommender/: __init__.py  corpus.py  emitters.py  install.py  metrics.py  miner.py  proposals.py  ranker.py  seed.py
src/neurobase/webui/: __init__.py  app.py  routes.py  security.py
src/neurobase/webui/templates/: base.html  error.html  suggestion_accept.html  suggestion_detail.html  suggestion_edit.html  suggestions_list.html
tests/: test_auto_enable.py  test_backups.py  test_brain_anthropic_api.py  test_brain_base.py  test_brain_claude_cli.py  test_brain_codex_cli.py  test_brain_select.py  test_claude_install.py  test_claude_recall.py  test_claude_scribe.py  test_cli.py  test_cli_curate.py  test_cli_doctor.py  test_cli_hook.py  test_cli_hook_codex.py  test_cli_init.py  test_cli_phase1.py  test_cli_recommend.py  test_cli_seed.py  test_cli_uninstall.py  test_codex_install.py  test_codex_scribe.py  test_config.py  test_corpus.py  test_cross_agent.py  test_curate_budget.py  test_curate_to_recommend.py  test_curator.py  test_distill.py  test_emitters.py  test_hook_schema_guard.py  test_linkify.py  test_locks.py  test_mcp_install.py  test_mcp_server.py  test_mcp_stdio.py  test_metrics.py  test_miner.py  test_projects.py  test_proposals.py  (+12 more)
