[project]
name = "neurobase-cli"
version = "0.1.0"
description = "Local-first, cross-agent memory layer for coding agents — captures, curates, injects, and recommends."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "The Neurobase Authors" }]
keywords = ["memory", "agents", "claude-code", "codex", "mcp", "local-first", "obsidian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "tomli-w>=1.0",
    "anthropic>=0.40",
    "keyring>=24.0",
    "mcp==1.28.1",
    "jinja2>=3.1",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/rebelscum216/neurobase"
Repository = "https://github.com/rebelscum216/neurobase"
Issues = "https://github.com/rebelscum216/neurobase/issues"

# Command `neurobase` → `main()` (decision D2/D4). `main` routes `neurobase
# hook …` through a Typer-light fast path that always exits 0 (spec §4/§5) and
# skips Typer's startup; every other command goes through the Typer app.
[project.scripts]
neurobase = "neurobase.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neurobase"]

# Belt-and-suspenders on top of .gitignore: the sdist must never ship a
# machine-local dev cache, regardless of what happens to exist on the build
# machine at package time (found by review: a real .uv-cache/ leaked into a
# tagged build before .uv-cache/ was even in .gitignore).
[tool.hatch.build.targets.sdist]
exclude = [".uv-cache/", "PICKUP.md"]

# Dev toolchain (build-plan §9). `uv sync` installs this group by default.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    "coverage>=7.6",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Fail-loud guardrail: no single test may block the gate indefinitely. The whole
# suite runs in ~5s, so 60s is enormous headroom — it only ever trips on a real
# hang (a subprocess that never returns, a blocking stdin read), and when it does
# it fails *naming the test* with a stack dump instead of hanging forever. Method
# defaults to `signal` (SIGALRM) on Unix so a blocked syscall is actually
# interrupted; pytest-timeout falls back to `thread` automatically on Windows CI.
timeout = 60

# Lenient to start (build-plan §9); tighten as the codebase grows.
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Coverage. Wired into the gate by scripts/ci.py, which runs pytest with
# `--cov=src/neurobase --cov-branch --cov-report=term-missing`. Before this, the
# number was real but completely unguarded: any PR could delete a test or add an
# untested branch and the gate stayed green (2026-07-18 coverage report, Gap 1).
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src/neurobase"]

[tool.coverage.report]
# WHICH METRIC THIS GATES — state it, because the three are easy to conflate and
# an earlier draft of the coverage report conflated them:
#
#   statement coverage  = covered_lines / num_statements
#   branch coverage     = covered_branches / num_branches
#   combined `Cover`    = (covered stmts + covered branches) / (stmts + branches)
#
# coverage.py's `fail_under` enforces the **combined `Cover`** figure — the one
# `coverage report` prints in its Cover column and the TOTAL row. It is NOT
# branch coverage and NOT statement coverage. Anyone raising this number should
# know they are ratcheting the combined metric.
#
# Seeded at the measured floor so the gate is green on the day it lands, and it
# can only ever ratchet upward. Raise it when coverage rises; never lower it to
# make a red build green — fix the tests instead.
#
# The floor has to hold on the LOWEST matrix cell, not on the author's laptop.
# Measured on run 29699164431 (2026-07-19), every cell:
#
#   ubuntu  · py3.11 / py3.13   90.88     1014 passed, 1 skipped
#   macOS   · py3.11 / py3.13   90.88     1014 passed, 1 skipped
#   Windows · py3.11 / py3.13   90.75     1010 passed, 5 skipped   <- was the floor
#
# Windows was PARKED (2026-07-20, .github/workflows/ci.yml) — the app targets
# macOS for now — so it's no longer in the matrix and no longer what "lowest
# cell" means; kept above as history, since it's still why 90.5 has the margin
# it does. Re-measure this comment if Windows returns to the matrix rather than
# assuming these numbers still hold: coverage has moved since 2026-07-19.
#
# So 90.5 is the floor with ~0.25 to spare on the (then-)tightest cell — the
# same margin the original seeding held. History: seeded at 90 against a
# simulated Windows 90.17; the first real runner (29668627676) measured 90.26,
# so the simulation erred low; the Gap 3 tests then took every cell up ~0.5.
#
# Note the number compared is the RAW percentage, not the rounded one
# `coverage report` prints: the TOTAL row showed "89%" at 88.57 and pytest-cov
# still failed it. A local `make ci` on a newer interpreter than the matrix
# uses can also read a few hundredths off (python3.14 locally reported 90.85
# against the matrix's 90.88) — trust the matrix, not the laptop. If a matrix
# cell ever trips this by a hair, drop the floor and say so in review — do not
# "fix" it by loosening what is measured.
fail_under = 90.5
show_missing = true
