[project]
name = "neurobase-cli"
version = "0.1.0"
description = "Local-first, cross-agent memory layer for coding agents — captures, curates, injects, and recommends."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "The Neurobase Authors" }]
keywords = ["memory", "agents", "claude-code", "codex", "mcp", "local-first", "obsidian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "tomli-w>=1.0",
    "anthropic>=0.40",
    "keyring>=24.0",
    "mcp==1.28.1",
]

[project.urls]
Homepage = "https://github.com/rebelscum216/neurobase"
Repository = "https://github.com/rebelscum216/neurobase"
Issues = "https://github.com/rebelscum216/neurobase/issues"

# Command `neurobase` → `main()` (decision D2/D4). `main` routes `neurobase
# hook …` through a Typer-light fast path that always exits 0 (spec §4/§5) and
# skips Typer's startup; every other command goes through the Typer app.
[project.scripts]
neurobase = "neurobase.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neurobase"]

# Belt-and-suspenders on top of .gitignore: the sdist must never ship a
# machine-local dev cache, regardless of what happens to exist on the build
# machine at package time (found by review: a real .uv-cache/ leaked into a
# tagged build before .uv-cache/ was even in .gitignore).
[tool.hatch.build.targets.sdist]
exclude = [".uv-cache/", "PICKUP.md"]

# Dev toolchain (build-plan §9). `uv sync` installs this group by default.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Fail-loud guardrail: no single test may block the gate indefinitely. The whole
# suite runs in ~5s, so 60s is enormous headroom — it only ever trips on a real
# hang (a subprocess that never returns, a blocking stdin read), and when it does
# it fails *naming the test* with a stack dump instead of hanging forever. Method
# defaults to `signal` (SIGALRM) on Unix so a blocked syscall is actually
# interrupted; pytest-timeout falls back to `thread` automatically on Windows CI.
timeout = 60

# Lenient to start (build-plan §9); tighten as the codebase grows.
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
